--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 				<role>owner</role>
 			</roles>
 		</developer>
+		<developer>
+			<name>Sheridan C Rawlins</name>
+			<id>sheridan.rawlins</id>
+			<email>sheridan.rawlins@yahoo.com</email>
+			<organization>Yahoo!</organization>
+			<organizationUrl>http://www.yahoo.com</organizationUrl>
+		</developer>
 	</developers>
 	<properties>
 		<fasterxml.version>2.5.0</fasterxml.version>
@@ -109,7 +116,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
+				<version>2.9.1</version>
 				<executions>
 					<execution>
 						<id>attach-javadoc</id>
@@ -166,7 +173,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.1</version>
+						<version>1.5</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
