Fix Sheridan's ID to be the sonatype ID 'scr14'.

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		</developer>
 		<developer>
 			<name>Sheridan C Rawlins</name>
-			<id>sheridan.rawlins</id>
+			<id>scr14</id>
 			<email>sheridan.rawlins@yahoo.com</email>
 			<organization>Yahoo!</organization>
 			<organizationUrl>http://www.yahoo.com</organizationUrl>
