--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
 jdk:
   - oraclejdk8
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y wget tar make
+install:
+  - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
+  - tar -xzvf protobuf-2.6.1.tar.gz
+  - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
+
