--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 install:
   - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
   - tar -xzvf protobuf-2.6.1.tar.gz
-  - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
+  - C=$(pwd) && cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install && cd $C
 
