--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ jdk:
   - oraclejdk8
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y wget tar make
 install:
-  - wget https://github.com/google/protobuf/releases/download/v2.5.0/protobuf-2.5.0.tar.gz
-  - tar -xzvf protobuf-2.5.0.tar.gz
-  - C=$(pwd) && cd protobuf-2.5.0 && ./configure --prefix=/usr && make && sudo make install && cd $C
+  - sudo apt-get install -y protobuf-compiler=2.5.0-9ubuntu1
 
