--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 		<artifactId>oss-parent</artifactId>
 		<version>7</version>
 	</parent>
-	<groupId>com.googlecode.protobuf-java-format</groupId>
+	<groupId>com.adhslx.lib.commons</groupId>
 	<artifactId>protobuf-java-format</artifactId>
 	<name>protobuf-java-format</name>
-	<version>1.5-SNAPSHOT</version>
+	<version>1.5.1-SNAPSHOT</version>
 	<description>Provide serialization and de-serialization of different formats based on Google’s protobuf Message. Enables overriding the default (byte array) output to text based formats such as XML, JSON and HTML.</description>
 	<url>https://github.com/bivas/protobuf-java-format</url>
 	<packaging>jar</packaging>
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
-			<version>2.5.0</version>
+			<version>2.6.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
